@@ -4,7 +4,9 @@ Updated footer with D-Portal-Logs link
 Added https info and link to Generator page
 Updated translations for new footer link
 Fix settings link
-Updated search_view_text in translations 
+Updated search_view_text in translations
+Added 'press enter' search input box when typing
+Remove auto-suggestion in search input box
 
 
 Development Portal (2017-08-31 shi)
